# oh-my-pi

./: .gitignore  Dockerfile  Dockerfile.robomp  README.md  package.json
.github/actions/bun-install/: action.yml
.github/workflows/: ci.yml
crates/brush-core-vendored/src/: processes.rs
crates/pi-natives/: Cargo.toml
crates/pi-natives/src/: grep.rs  workspace.rs
crates/pi-shell/: Cargo.toml
crates/pi-shell/src/: lib.rs  pty.rs
crates/pi-shell/tests/: background_term_test.rs  cleanup_race_test.rs  concurrent_isolation_test.rs  macos_descendant_test.rs  pty_test.rs
crates/rwp-server/: Cargo.toml  README.md  test_html2text.rs
crates/rwp-server/src/: auth.rs  lib.rs  main.rs  metrics.rs  request_id.rs  router.rs  state.rs
crates/rwp-server/src/cdp_tunnel/: mod.rs
crates/rwp-server/src/dap_tunnel/: mod.rs
crates/rwp-server/src/eval_kernel/: jupyter.rs  mod.rs  stdio.rs
crates/rwp-server/src/fs_ops/: etag_cache.rs  mod.rs  watcher.rs  write_through.rs
crates/rwp-server/src/handlers/: bash.rs  cdp.rs  dap.rs  edit.rs  eval.rs  fs.rs  lsp.rs  mod.rs  sessions.rs  sqlite.rs
crates/rwp-server/src/lsp_tunnel/: mod.rs
crates/rwp-server/src/named/: mod.rs
crates/rwp-server/src/protocol/: error.rs  events.rs  mod.rs  requests.rs  responses.rs
crates/rwp-server/src/session/: cache.rs  core.rs  mod.rs  registry.rs
crates/rwp-server/tests/: archive_bulk_write_test.rs  archive_snapshot_test.rs  archive_test.rs  ast_test.rs  auth_test.rs  bash_test.rs  cdp_test.rs  cors_test.rs  dap_test.rs  e2e_test.rs  edit_ast_dryrun_test.rs  edit_path_scope_test.rs  eval_jupyter_test.rs  eval_test.rs  fs_mutate_test.rs  fs_url_test.rs  fs_watcher_test.rs  glob_grep_test.rs  grep_ast_lang_test.rs  idle_timeout_test.rs  integration.rs  lsp_routing_test.rs  lsp_test.rs  metrics_test.rs  reads_test.rs  request_id_test.rs  session_cancel_test.rs  session_logs_test.rs  session_scope_test.rs  sessions_test.rs  sqlite_etag_test.rs  sqlite_if_match_test.rs  sqlite_path_scope_test.rs  sqlite_test.rs  stat_test.rs  tls_test.rs  writes_test.rs
docs/: python-repl.md  rwp-backend.md  rwp-endpoints.md  rwp-protocol.md
docs/tools/: ast-edit.md  ast-grep.md  debug.md  eval.md  find.md  lsp.md  search.md  write.md
infra/: runner.Dockerfile
infra/docs/: 03-runner-image.md
scripts/: ci-build-rwp-server.ts  ci-release-build-binaries.ts  install.ps1  install.sh
